fixed the deep-research

--- a/projects/deep-research/Dockerfile
+++ b/projects/deep-research/Dockerfile
@@ -1,33 +1,29 @@
-# Use official Python slim image
 FROM python:3.11-slim
 
-# Set environment variables
 ENV PYTHONUNBUFFERED=1 \
-    PIP_NO_CACHE_DIR=1 \
     DEBIAN_FRONTEND=noninteractive
 
-# Set working directory
 WORKDIR /app
 
-# Install system dependencies
+# System deps
 RUN apt-get update && apt-get install -y \
-    git \
-    build-essential \
-    curl \
+    git build-essential curl \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements file
-COPY requirements.txt .
+# Install uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.local/bin:$PATH"
 
-# Install Python dependencies
-RUN pip install --upgrade pip
-RUN pip install -r requirements.txt
+# Copy project metadata
+COPY pyproject.toml .
+COPY uv.lock .
 
-# Copy the rest of the app
+# Install dependencies using uv
+RUN uv sync --frozen --no-dev --system
+
+# Copy your source code
 COPY . .
 
-# Expose port for Streamlit
 EXPOSE 7860
 
-# Command to run the Streamlit app
 CMD ["streamlit", "run", "ui/app.py", "--server.port=7860", "--server.address=0.0.0.0", "--server.headless=true"]
