--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
 name = "agents"
 version = "0.1.0"
-description = "Add your description here"
+description = "Agentic AI project"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = "==3.12.*"
 
 dependencies = [
     # LLM Providers / SDKs
@@ -32,7 +32,7 @@ dependencies = [
     "psutil>=7.0.0",
     "python-dotenv>=1.0.1",
     "requests>=2.32.3",
-    "aiohttp",
+    "aiohttp>=3.8.5",
     "httpx>=0.28.1",
 
     # Web Automation / Scraping
@@ -40,9 +40,12 @@ dependencies = [
     "beautifulsoup4>=4.12.3",
     "lxml>=5.3.1",
     "wikipedia>=1.4.0",
+    "yfinance>=0.2.27",
+    "textblob>=0.17.1",
 
     # Visualization / UI
-    "gradio>=5.22.0",
+    "gradio>=5.26.1,<5.28.0",
+    "huggingface-hub<=1.14",
     "plotly>=6.0.1",
     "streamlit>=1.51.0",
 
@@ -55,12 +58,7 @@ dependencies = [
     "sendgrid>=6.11.0",
     "semantic-kernel>=1.25.0",
     "speedtest-cli>=2.1.3",
-    "smithery>=0.1.0",
-    "bs4>=0.0.2",   # kept in case needed, though beautifulsoup4 covers it
-    "yfinance>=0.2.27",
-    "gradio>=3.34.0",
-    "sendgrid>=6.9.7",
-    "textblob>=0.17.1",
+    "smithery>=0.1.0"
 ]
 
 [dependency-groups]
