fixed deep-research 2nd call issue

--- a/.github/workflows/deep-research-app-hf.yml
+++ b/.github/workflows/deep-research-app-hf.yml
@@ -55,7 +55,7 @@ jobs:
                     repo_id=REPO_ID,
                     token=TOKEN,
                     repo_type="space",
-                    space_sdk="gradio",
+                    space_sdk="docker",
                     private=False
                 )
                 print(f"Created new repository: {REPO_ID}")
