--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,10 +44,9 @@ dependencies = [
     "textblob>=0.17.1",
 
     # Visualization / UI
-    "gradio>=5.26.1,<5.28.0",
-    "huggingface-hub<=1.14",
     "plotly>=6.0.1",
     "streamlit>=1.51.0",
+    "reportlab",
 
     # PDF & Document Tools
     "pypdf>=5.4.0",
