--- a/projects/deep-research/Dockerfile
+++ b/projects/deep-research/Dockerfile
@@ -18,8 +18,8 @@ ENV PATH="/root/.local/bin:$PATH"
 COPY pyproject.toml .
 COPY uv.lock .
 
-# Install dependencies using uv
-RUN uv sync --frozen --no-dev
+# Install dependencies using uv into the system Python
+RUN uv sync --frozen --no-dev --no-venv
 
 # Copy your source code
 COPY . .
