--- a/projects/deep-research/Dockerfile
+++ b/projects/deep-research/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.12-slim
 
 ENV PYTHONUNBUFFERED=1 \
-    DEBIAN_FRONTEND=noninteractive
+    DEBIAN_FRONTEND=noninteractive \
+    PYTHONPATH=/app:$PYTHONPATH
 
 WORKDIR /app
 
